# cmake_based_embedded_project_templates

./: README.md
avr/arduino/i2c_scanner/: CMakeLists.txt  compiler_output.txt
avr/arduino/i2c_scanner/app/: CMakeLists.txt
avr/arduino/i2c_scanner/cmake/compilers/: toolchain-avr.cmake  toolchain-clang.cmake
avr/arduino/i2c_scanner/cmake/utils/: Fetch_platform_dependencies.cmake
esp8266/arduino/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compiler_output.txt
esp8266/arduino/cmake/compilers/: toolchain-esp8266-xtensa.cmake
esp8266/arduino/cmake/utils/: Fetch_platform_dependencies.cmake  diagnostic.cmake  find.cmake  output_generation.cmake
esp8266/arduino/src/app/7SegmentNeoPixelClock/: CMakeLists.txt
esp8266/arduino/src/app/7SegmentNeoPixelClock/7SegmentNeoPixelClock/: CMakeLists.txt
esp8266/arduino/src/app/7SegmentNeoPixelClock/7SegmentNeoPixelClock/.project/cmake_build/: Fetch_project_dependencies.cmake  bootstrap.bat
esp8266/arduino/src/app/7SegmentNeoPixelClock/7SegmentNeoPixelClock/src/: NeoPixel_7_Segment_Clock.cpp
esp8266/arduino/src/board/: CMakeLists.txt
